--- a/tex/config/xemath.tex
+++ b/tex/config/xemath.tex
@@ -31,6 +31,9 @@
 \providecommand{\R}{\mathbb{R}}
 \providecommand{\N}{\mathbb{N}}
 
+% average
+\newcommand{\avg}[1]{\left\langle #1 \right\rangle}
+
 
 % automatic paired delimiters from mathtools
 \let\norm\relax %relax norm from the physics package
