--- a/tex/main/02-background.tex
+++ b/tex/main/02-background.tex
@@ -114,7 +114,7 @@ There is a generalization for general fluids:
 
 \begin{figure}
 	\centering
-	\includegraphics[width=\textwidth]{img/domination.png}
+	\includegraphics[width=\textwidth]{img/ch-02/domination.png}
 	\caption{Domination of different components at different times}
 	\label{fig:domination}
 \end{figure}
@@ -167,7 +167,7 @@ At different times, the universe is dominated by different components. Approxima
 
 \begin{figure}
 	\centering
-	\includegraphics[width=\textwidth]{img/evolution.png}
+	\includegraphics[width=\textwidth]{img/ch-02/evolution.png}
 	\caption{Evolution}
 	\label{fig:evolution}
 \end{figure}
@@ -302,7 +302,7 @@ In \cref{tab:thermal-history} and \cref{fig:evolution}, an overview of the therm
 
 \begin{figure}
 	\centering
-	\includegraphics[width=\textwidth]{img/big-bang.png}
+	\includegraphics[width=\textwidth]{img/ch-02/big-bang.png}
 	\caption{History of the Big Bang}
 	\label{fig:big-bang}
 \end{figure}
@@ -457,7 +457,7 @@ No analytical solution is known. A set of numerical solutions is shown in \cref{
 
 \begin{figure}
 	\centering
-	\includegraphics[width=\textwidth]{img/boltzmann.png}
+	\includegraphics[width=\textwidth]{img/ch-02/boltzmann.png}
 	\caption{Solutions of the Boltzmann equation for different destruction rates $\beta$. We assume $\beta(T) = \beta_0$ is constant. The vertical axis is a proxy for abundance, and the horizontal axis for time. First, particles remain in equilibrium (solid line), then they decouple (dashed lines), leaving relic abundances. When $\beta_0$ is large, thermal equilibrium is maintained longer, so the relic abundance is lower.}
 	\label{fig:boltzmann}
 \end{figure}
@@ -540,7 +540,7 @@ For each of these reactions, there is a Boltzmann equation which describes the e
 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.6\textwidth]{img/nucleosynthesis.png}
+	\includegraphics[width=0.6\textwidth]{img/ch-02/nucleosynthesis.png}
 	\caption{The abundances of \ce{D}, \ce{^4He}, \ce{^3He}, and \ce{^7Li}, as a function of the photon to baryon ration $\eta$. The yellow vertical area indicates the measured value of $\eta$, while the shaded horizontal bars are the measured abundances. The modelled abundances agree well with the experiments, except for \ce{^7Li}, which is probably due to uncertainties in how much \ce{^7Li} is destroyed in stars.}
 	\label{fig:nucleosynthesis}
 \end{figure}
@@ -559,7 +559,7 @@ For given initial conditions, the ionization fraction can be calculated as a fun
 
 \begin{marginfigure}
 	\centering
-	\includegraphics[width=\textwidth]{img/ionization.png}
+	\includegraphics[width=\textwidth]{img/ch-02/ionization.png}
 	\caption{The ionization $X_e$ as a function of redshift. Before recombination (at high redshift), the universe is fully ionized with $X_e=1$. The Saha solution assumes thermal equilibrium, which is only valid until recombination. After the freeze-out, a residual ionization fraction ($X_e \approx \num{e-3}$)remains.}
 	\label{fig:ionization}
 \end{marginfigure}
@@ -589,7 +589,7 @@ Measurements of the CMB show a blackbody spectrum with remarkably deviations of 
 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.5\textwidth]{img/cmb.png}
+	\includegraphics[width=0.5\textwidth]{img/ch-02/cmb.png}
 	\caption{The measured spectrum of the cosmic microwave background and a fit with a blackbody spectrum. The residuals show an average deviation of only $\Delta T / T \approx \num{e-5}$.}
 	\label{fig:cmb}
 \end{figure}
@@ -764,7 +764,7 @@ We define two things two reformulate the horizon problem:
 
 \begin{figure}
 	\centering
-	\includegraphics[width=\textwidth]{img/inflation.png}
+	\includegraphics[width=\textwidth]{img/ch-02/inflation.png}
 	\caption{The light cone structure in an inflationary universe. Without inflation, the forward light cone (dashed line) would be smaller than our past light cone, $\chi_p$, at the last scattering surface, resulting in causality problems. With a period of inflation from $t_i$ to $t_e$, however, the forward light cone can be larger than the past light cone at $t_\text{ls}$.}
 	\label{fig:inflation}
 \end{figure}
@@ -820,7 +820,7 @@ Inflation requires vacuum energy, which is realized as a scalar field $\phi(\vec
 
 \begin{marginfigure}
 	\centering
-	\includegraphics[width=\textwidth]{img/false-vacuum.png}
+	\includegraphics[width=\textwidth]{img/ch-02/false-vacuum.png}
 	\caption{The potential of the inflaton field. During inflation, the field moves from its initial false vacuum state to a true vacuum state, which generates vaccum energy.}
 	\label{fig:false-vacuum}
 \end{marginfigure}
