--- a/tex/config/preamble.tex
+++ b/tex/config/preamble.tex
@@ -11,6 +11,7 @@
 \usepackage{booktabs}               % Nicer tables
 \usepackage{xcolor}
 \usepackage{enumitem}
+\usepackage{subcaption}
 
 \definecolor{primary_color}{RGB}{214,35,0}
 
