--- a/tex/main/01-introduction.tex
+++ b/tex/main/01-introduction.tex
@@ -5,14 +5,14 @@
 When looking in a clear night into the sky you can see a whitish band where a lot of stars are located (see figure \ref{fig:milkyway}). 
 \begin{figure}[H]
 	\centering
-		\includegraphics[width=0.9\textwidth]{pics/milkyway.png}
+		\includegraphics[width=0.9\textwidth]{img/ch-01/milkyway.png}
 		\caption{An image of the night sky which shows the milky way.}
 		\label{fig:milkyway}
 \end{figure}
 This band is the milky way the galaxy to which our solar system belongs. If we were able to have a look onto our galaxy from outside of it, we would see something like it is shown in figure \ref{fig:milkywayoutside}. From the image one sees that the milky way has a galactic center which has the form of a bar and spiral arms which come from the center. Our solar system is situated quite far away from the galactic center in one of the arms. 
 \begin{figure}[H]
 	\centering
-		\includegraphics[width=0.9\textwidth]{pics/milkywayfromoutside.png}
+		\includegraphics[width=0.9\textwidth]{img/ch-01/milkywayfromoutside.png}
 		\caption{An illustration of the milky way showing it from an outside perspective.}
 		\label{fig:milkywayoutside}
 \end{figure}
@@ -20,27 +20,27 @@ But our galaxy is not the only one in our Universe and there are different types
 \begin{figure}[H]
 	\centering
 		\begin{subfigure}[b]{0.49\textwidth}
-			\includegraphics[width=1\linewidth]{pics/spiralM101.png}
+			\includegraphics[width=1\linewidth]{img/ch-01/spiralM101.png}
 			\caption{}
 			\label{fig:spiralM101}
 		\end{subfigure}
 		\begin{subfigure}[b]{0.49\textwidth}
-			\includegraphics[width=1\linewidth]{pics/barredspiralNGC1300.png}
+			\includegraphics[width=1\linewidth]{img/ch-01/barredspiralNGC1300.png}
 			\caption{}
 			\label{fig:barredspiralNGC1300}
 		\end{subfigure}
 		\begin{subfigure}[b]{0.49\textwidth}
-			\includegraphics[width=1\linewidth]{pics/ellipticalNGC1132.png}
+			\includegraphics[width=1\linewidth]{img/ch-01/ellipticalNGC1132.png}
 			\caption{}
 			\label{fig:ellipitcalNGC1332}
 		\end{subfigure}
 		\begin{subfigure}[b]{0.49\textwidth}
-			\includegraphics[width=1\linewidth]{pics/dwarfirregularNGC1427A.png}
+			\includegraphics[width=1\linewidth]{img/ch-01/dwarfirregularNGC1427A.png}
 			\caption{}
 			\label{fig:dwarfirregularNGC1427A}
 		\end{subfigure}
 		\begin{subfigure}[b]{0.55\textwidth}
-			\includegraphics[width=1\linewidth]{pics/seyfertNGC1097.png}
+			\includegraphics[width=1\linewidth]{img/ch-01/seyfertNGC1097.png}
 			\caption{}
 			\label{fig:seyfertNGC1097}
 		\end{subfigure}
@@ -50,12 +50,12 @@ Galaxies can gather in groups (see figure \ref{fig:galaxygroupHCG16}) or cluster
 \begin{figure}[H]
 	\centering
 		\begin{subfigure}[b]{0.49\textwidth}
-			\includegraphics[width=1\linewidth]{pics/galaxygroupHCG16.png}
+			\includegraphics[width=1\linewidth]{img/ch-01/galaxygroupHCG16.png}
 			\caption{}
 			\label{fig:galaxygroupHCG16}
 		\end{subfigure}
 		\begin{subfigure}[b]{0.49\textwidth}
-			\includegraphics[width=1\linewidth]{pics/galaxyclusterA383.png}
+			\includegraphics[width=1\linewidth]{img/ch-01/galaxyclusterA383.png}
 			\caption{}
 			\label{fig:galaxyclusterA383}
 		\end{subfigure}
@@ -66,7 +66,7 @@ Galaxies can gather in groups (see figure \ref{fig:galaxygroupHCG16}) or cluster
 The standard cosmological model assumes that the universe was initially created in a Big Bang and underwent different epochs until it became the way it is now. Figure \ref{fig:standardcosmologicalmodel} shows the history of the universe, when assuming this model. 
 \begin{figure}[H]
 	\centering
-		\includegraphics[width=0.7\textwidth]{pics/standardcosmologicalmodel.png}
+		\includegraphics[width=0.7\textwidth]{img/ch-01/standardcosmologicalmodel.png}
 		\caption{The standard cosmological model describes the evolution of our Universe starting with the Big Bang.}
 		\label{fig:standardcosmologicalmodel}
 \end{figure}
@@ -76,7 +76,7 @@ From this model we also find that the universe nowadays consist of about 4\% ord
 For experimental results large telescopes are needed. In order for them to be useful, they have to be placed in places with the right conditions. Therefore, a lot of the telescopes are in space, especially if one wants to observe in the ultraviolet. Figure \ref{fig:electromagneticspectrum} shows the electromagnetic spectrum and at which wavelengths it is necessary to do the observations in space. Radio waves can be observed from earth, for those observation we use array telescopes. 
 \begin{figure}[H]
 	\centering
-		\includegraphics[width=1.0\textwidth]{pics/electromagneticspectrum.png}
+		\includegraphics[width=1.0\textwidth]{img/ch-01/electromagneticspectrum.png}
 		\caption{The figure shows at which wavelengths it is necessary to put measurement devices in space in order to do observations.}
 		\label{fig:electromagneticspectrum}
 \end{figure}
@@ -85,7 +85,7 @@ For experimental results large telescopes are needed. In order for them to be us
 Astrophysical units are uniquely used in Astrophysics. In order to talk of the mass of different stars, galaxies and more we use the unit of solar masses, where $1 M_{\odot} = 1.99 \cdot 10^{30}$ kg corresponds to the mass of the sun. When talking about time usually years instead of seconds are used, where $1$ yr $ = 3.16 \cdot 10^7$ . Finally we come to the unit of distance. The most known distance scale used in Astrophysics is probably light-years, which is the distance light travels in one year. An other unit for distances which we will use mostly is parsec, $1$ pc $ = 3.09 \cdot 10^{16}$ m $ = 3.26$ ly. Figure \ref{fig:parsec} shows the meaning of a parsec. It is the correlation between the distance between earth and sun and the respective object (a star in the figure) to which we want to know the distance. 1 parsec corresponds to the angle of 1" at the object. 
 \begin{figure}[H]
 	\centering
-		\includegraphics[width=0.3\textwidth]{pics/parsec.png}
+		\includegraphics[width=0.3\textwidth]{img/ch-01/parsec.png}
 		\caption{One parsec corresponds to the needed distance between sun and object which results into an angle of 1", if one looks at the triangle created by the sun, the object and the earth, which rotates around the sun. \cite{parsec}}
 		\label{fig:parsec}
 \end{figure}
