--- a/tex/config/xemath.tex
+++ b/tex/config/xemath.tex
@@ -6,6 +6,9 @@
       exponent-product = \cdot,  
 ]{siunitx}
 
+% probability
+\DeclareMathOperator{\Prob}{Prob}
+
 % trigonometry
 \DeclareMathOperator{\arcosh}{arcosh}
 \DeclareMathOperator{\arsinh}{arsinh}
