--- a/tex/config/xemath.tex
+++ b/tex/config/xemath.tex
@@ -8,6 +8,10 @@
 
 % probability
 \DeclareMathOperator{\Prob}{Prob}
+\newcommand{\moment}[1]{\left\langle #1 \right\rangle}
+
+% convolution
+\newcommand{\convolve}{*}
 
 % trigonometry
 \DeclareMathOperator{\arcosh}{arcosh}
