--- a/tex/main/03-linear-perturbations.tex
+++ b/tex/main/03-linear-perturbations.tex
@@ -429,9 +429,7 @@ At small $k$, $T = 1$ as required.
 
 
 \section{Primordial perturbations}
-Inflation also gives a mechanism to generate primordial perturbations. Remember that we proposed an inflaton field $\phi$, which is in a false vacuum configuration at the beginning, leading to vacuum energy. This drives an accelerated expansion. We required that the scale factor grew by $a_e/a_i > e^{60}$ during inflation, so small features are blown up to macroscopic features.
-
-Quantum mechanical fluctuations in the perturbation fields are converted to classical large scale perturbations by inflation. These act as the initial perturbations for formations of structure.
+Inflation also gives a mechanism to generate primordial perturbations. Remember that we proposed an inflaton field $\phi$, which is in a false vacuum configuration at the beginning, leading to vacuum energy. This drives an accelerated expansion. We required that the scale factor grew by $a_e/a_i > e^{60}$ during inflation, so small features are blown up to macroscopic features. These act as the initial perturbations for formations of structure.
 
 The quantum harmonic oscillator is described by the Hamiltonian
 \begin{align*}
@@ -442,104 +440,125 @@ which gives rise to equally spaced energy levels
 	E_n = \frac{\hbar}{m \omega}
 	\left( m + \frac{1}{2} \right),
 \end{align*}
-for $n \in \set{0, 1, 2, \dots}$. We consider a state $\ket{n}$ with expected position
+for $n \in \set{0, 1, 2, \dots}$. We consider a state $\ket{n}$, which deviates from its average position by
 \begin{align*}
 	\expval{x^2} = \expval{x^2}{n}
 	= \frac{\hbar}{m\omega}
-	\left( n + \frac{1}{2} \right),
+	\left( n + \frac{1}{2} \right).
 \end{align*}
-so fluctuations even exist in the ground state $n=0$. For inflation, each $\vec{k}$-mode $\Phi_{\text{p},\vec{k}}$ acts like a quantum harmonic oscillator. This yields predictions for quantum fluctuations, which we will calculate now.
+We can see that even for the ground state $n=0$, fluctuations exist. For inflation, each $\vec{k}$-mode $\Phi_{\text{p},\vec{k}}$ acts like a quantum harmonic oscillator.
 
-Let $P(k) \propto \expval{\abs{\Phi_k}^2}$ be the power spectrum of the primordial potential. One can show that
-\begin{align*}
-	P(k) \propto k^{n-4},
-\end{align*}
-where $n$ is arbitrarily close to $1$, and depends on the slow roll parameters $\dv*{V}{\phi}$ and $\dv*[2]{V}{\phi}$. The case $n=1$ is called \emph{scale invariant} or \emph{Harison-Zel'dovich}.
+We define the power spectrum\sidenote{What this means is explained in the next section.} as the second moment of the Fourier-transformed primordial potential, $P(k) \propto \langle{\abs{\Phi_{\vec{p},k}}^2}\rangle$. One can show that $P(k) \propto k^{n-4}$, where $n$ is arbitrarily close to $1$, and depends on the slow roll parameters $\dv*{V}{\phi}$ and $\dv*[2]{V}{\phi}$. The case $n=1$ is called \emph{scale invariant} or \emph{Harison-Zel'dovich}.
 
 Inflation generically predicts the following:
 \begin{itemize}
-	\item The perturbations are adiabatic, also called curvature or density perturbations.
-	\item The perturbations are Gaussian, which will be discussed in the next section
+	\item The perturbations are adiabatic, which was explained in the previous chapter.
+	\item The perturbations are Gaussian, which will be explained in the next section.
 \end{itemize}
 
 
 
 
 \section{Cosmological field statistics}
-We consider a perturbation field, such as the density contrast $\delta(\vec{x},t)$. There are some statistical quantities.
+The density contrast $\delta(\vec{x}, t)$ can be measured more-or-less accurately by observations. We can also get a simulated density contrast from a model. There is, however, a problem when trying to compare the measurements with the prediction of the model, since we are attempting to compare two different realizations of a random quantum process. 
 
-The Fourier transform is
+One way to solve this problem is to compare not the particular density contrasts, but the underlying probability distributions. For a given model, these do not suffer from any randomness, and can therefore be compared directly.
+
+We divide the universe into $n$ cells, which are centred at positions $\vec{x}_1, \dots, \vec{x}_n$. The random perturbation field is then characterized by the probability distribution function,
+\begin{align*}
+	\Prob_x(\delta_1, \dots, \delta_n) \dd{\delta_1} \cdots \dd{\delta_n},
+\end{align*}
+which is the probability that the field $\delta$ has values in the range $\delta_i$ to $\delta_i + \dd{\delta_i}$ at positions $\vec{x}_i$.
+
+As we see, this function $\Prob_x$ could be very complicated, potentially taking a huge number of arguments as input. To simplify the situation, we look only at some statistical moments of $\Prob_x$.
+
+\subsection{Statistical moments}
+A statistical moment is a quantity that describes the shape of a function. If the function is a probability distribution, some well-known examples of moments are the expected value and the variance.
+
+The moments of a probability distribution $\Prob_x$ are defined as\sidenote{If this looks unfamiliar, compare it with the notation that is used in mathematics for the $n$-th moment $\mu_n$ of a single-variate probability distribution $P$,
+\begin{align*}
+	\mu_n = \int x^n P(x) \dd{x}.
+\end{align*}}
+\begin{align*}
+	\moment{\delta_1^{\ell_1} \dots \delta_n^{\ell_n}}
+	&= \int \delta_1^{\ell_1} \cdots \delta_n^{\ell_n}
+	\Prob_x(\delta_1, \dots, \delta_n) \dd{\delta_1} \cdots \dd{\delta_n},
+\end{align*}
+where $\ell_i \in \set{0, 1, 2, \dots}$. Because of the cosmological principle, all moments are invariant under spatial translation and rotation.
+
+The first moment is the expected value, $\moment{\delta} = 0$, because the density distribution is expected to be zero by assumption.\sidenote{Compare this with a perhaps more familiar notation of the expected value, $\mu = \int x P(x) \dd{x}$.}
+
+Some more moments are the variance $\sigma^2 = \moment{\delta^2}$, and the two-point correlation function
+\begin{align*}
+	\xi(x) = \moment{\delta_1 \delta_2}, \quad \text{with } x = \abs{\vec{x}_1 - \vec{x}_2}.
+\end{align*}
+Note that $\xi(0) = \sigma^2$, and that $\xi(x)$ only depends on the distance between $\vec{x}_1$ and $\vec{x}_2$.
+
+The same analysis can be performed in Fourier space,\sidenote{Remember our convention for the Fourier transform,
 \begin{align*}
 	\delta(\vec{x},t)
-	&= \sum_{\vec{k}} \delta_{\vec{k}} \exp(i \vec{k} \cdot \vec{x})\\
-	\delta_{\vec{k}}(t) &= \frac{1}{V} \int \delta(\vec{x},t) \exp(- i \vec{k} \cdot \vec{x})
+	&= \sum_{\vec{k}} \delta_{\vec{k}}(t) \exp(i \vec{k} \cdot \vec{x})\\
+	\delta_{\vec{k}}(t) &= \frac{1}{V} \int \delta(\vec{x},t) \exp(-i\vec{k}\cdot\vec{x}) \dd{^3\vec{x}}.
 \end{align*}
-
-The power spectrum is defined as
+Also, be aware that we have to convert the probability distribution to Fourier space, written as $\Prob_k$.}
+where we define the power spectrum,
 \begin{align*}
-	p(k) = V_n \avg{\abs{\delta_{\vec{k}}(t)}^2}
+	P(k)
+	&\defeq V \moment{\abs{\delta_k}^2},
 \end{align*}
-
-The variance is
+which is the variance in Fourier space. It can be related to the two-point correlation function:
 \begin{align*}
-	\avg{\delta^2}
-	&= \sigma_\delta^2\\
-	&= \frac{1}{(2\pi)^3} \int P(k) \dd{^3 k}\\
-	&= \frac{1}{(2\pi)^2} \int P(k) k^2 \dd{k}\\
-	&= \frac{1}{(2\pi)^2} \int P(k) k^3 \dd{\ln(k)}.
+	P(k)
+	&= \int \xi(\abs{\vec{x}}) \exp(-i\vec{k}\cdot\vec{x}) \dd{^3 \vec{x}},\\
+	\xi(r)
+	&= \frac{1}{(2\pi)^3} \int P(k) \exp(i \vec{k}\cdot\vec{r}) \dd{^3\vec{k}}.
 \end{align*}
-We define $\Delta^2(k) = \frac{1}{(2\pi)^2} k^3 P(k)$, which is the contribution to the variance per $\ln k$ interval.
+	
+The variance in position space can then be written in terms of the power function,
+\begin{align*}
+	\moment{\delta^2}
+	&= \frac{1}{(2\pi)^3} \int P(k) \dd{^3\vec{k}}\\
+	&= \frac{1}{2\pi^2} \int P(k) k^2 \dd{k}\\
+	&= \frac{1}{2\pi^2} \int P(k) k^3 \dd{\ln(k)}.
+\end{align*}
+We define $\Delta^2(k) = k^3 P(k)/2\pi^2$, which is the contribution to the variance per $\ln(k)$ interval.
 
-The field can be smoothed by a kernel $W(r)$, such as a top hat sphere:
+\subsection{Smoothing}
+If we only want to analyse features larger than a certain size limit, we convolve the density contrast with a smoothing kernel. An example for such a kernel is the top hat sphere,
 \begin{align*}
 	W_R(r) = 
 	\begin{cases}
-	\frac{3}{4\pi R^3} & \text{if} r \leq R\\
-	0 & \text{otherwise}
+	\frac{3}{4\pi R^3} & \text{if } r \leq R,\\
+	0 & \text{otherwise}.
 	\end{cases}
 \end{align*}
-The smoothed field is then
+The smoothed field $\delta_R$ is then defined as a convolution of the original field and the kernel:
 \begin{align*}
-	\delta_s(\vec{x},t)
-	&= \int \dd{^3 x'} \delta(\vec{x}',t) W(\abs{\vec{x}-\vec{x}'}).
+	\delta_R(\vec{x},t)
+	&= \int \dd{^3 \vec{y}} \delta(\vec{y},t) W_R(\vec{x}-\vec{y}),
 \end{align*}
-The variance of the smoothed field is
-\begin{align*}
-	\avg{\delta_s^2} = \sigma_{\delta_s}^2
-	&= \frac{1}{(2\pi)^2} \int P(k) \tilde{W}(k) k^2 \dd{k},
-\end{align*}
-where $\tilde{W}(k)$ is the Fourier transform of $W(r)$. For the top hat kernel,
-\begin{align*}
-	\tilde{W}_R(k)
-	&= \frac{3}{k R^2} [\sin(kR) - kR \cos(kR)],
-\end{align*}
-so $\sigma_R^2 = \sigma_{\delta_s}^2$ is the variance of $\delta$, averaged over spheres of radius $R$.
+which is commonly written $\delta_R = \delta \convolve W_R$.
 
-A related quantity is the two-point correlation function
+The variance of the smoothed field is then\sidenote{We can simplify the calculation by using the convolution theorem,
 \begin{align*}
-	\xi(x)
-	&= \avg{\delta(\vec{x}_1) \delta(\vec{x}_2)},
-\end{align*}
-where $x = \abs{\vec{x}_1 - \vec{x}_2}$. We see that $\xi(0) = \avg{\delta^2}$. One can show that
+	\widetilde{f \convolve g} &= \widetilde{f} \cdot \widetilde{g},\\
+	\widetilde{f \cdot g} &= \widetilde{f} \convolve \widetilde{g}.
+\end{align*}}
 \begin{align*}
-	\xi(x) &= \frac{1}{(2\pi)^3} \int P(k) \exp(i \vec{k} \cdot \vec{x}) \dd{^3 k}\\
-	P(k) &= \int \xi(\abs{x}) \exp(- i \vec{k} \cdot \vec{x}) \dd{x}.
+	\moment{\delta_R^2}
+	&= \frac{1}{2 \pi^2} \int P(k) \widetilde{W}_R^2 k^2 \dd{k},
 \end{align*}
-TODO missing.
+where $\widetilde{W}_R$ is the Fourier transform of $W_R$, which is
+\begin{align*}
+	\widetilde{W}_R(k)
+	&= \frac{3}{k R^2} [\sin(kR) - kR \cos(kR)].
+\end{align*}
 
-In general, one can characterize the statistics of the field using a series of $n$-point correlation functions
-\begin{align*}
-	\avg{\delta(\vec{x}_1) \cdots \delta(\vec{x}_n)},
-\end{align*}
-as long as the field is statistically homogeneous and isotropic.
+\subsection{Gaussian fields}
 
-Gaussian fields have the property that
-\begin{align*}
-	\Prob(\delta(\vec{x}_1) \cdots \delta(\vec{x}_n))
-\end{align*}
-is proportional to a multivariate Gaussian function. Then, one can show that the full statistical properties of a Gaussian field is given by the two-point correlation functions. Higher order correlation functions can be expressed in terms of the two-point functions.
+The probability distribution can be fully recovered if all of its statistical moments are known, as long as the distribution is homogeneous and isotropic. \emph{Gaussian fields}, where $\Prob(\delta(\vec{x}_1) \cdots \delta(\vec{x}_n))$ is proportional to a multivariate Gaussian function, can still be fully recovered if only the two-point correlation function is known. Consequently, higher order moments can be expressed in terms of the two-point correlation function.
 
-In the standard model of cosmology, we assume that the perturbation fields are initially Gaussian. Later, the perturbations on small scales become non-linear and non-Gaussian. Thus, the power spectrum of the perturbation field is all we need to know initially.
+In the standard model of cosmology, we assume that the perturbation fields are initially Gaussian, but they can evolve to non-Gaussian fields later. Then, the initial power spectrum of the perturbation field is all we need to know to fully characterize the field.
 
 
 
